<resources>
    <string name="app_name">Segurity Login</string>
    <string name="textview_tittle_login"> SECURITY LOGIN </string>
    <string name="textview_tittle_first_login"> 1era Autenticación </string>

    <string name="textview_tittle_user"> Usuario </string>
    <string name="textview_tittle_password"> Contraseña </string>

    <string name="textview_tittle_old_password"> Actual Contraseña </string>
    <string name="textview_tittle_new_password"> Nueva Contraseña </string>
    <string name="textview_tittle_confirmpassword"> Confirmar Contraseña </string>

    <string name="button_tittle"> Login </string>
    <string name="button_tittle_biometric"> Biometric Login </string>

    <string name="biometric_failed">Fingerprint not recognized</string>



    <string name="biometric_title">Login</string>
    <string name="biometric_subtitle">Login to your Osta account</string>
    <string name="biometric_description">Place your finger on the device home button to verify your identity</string>
    <string name="biometric_negative_button_text">CANCEL</string>


    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported">Dispositivo no soporta autenticación con huella</string>
    <string name="biometric_error_fingerprint_not_available">Huella digital no está registrada en el teléfono</string>
    <string name="biometric_error_permission_not_granted">Permisos no garantizados por el usuario</string>
    <string name="biometric_failure">Login incorrecto</string>
    <string name="biometric_cancelled">Autenticación cancelada por el usuario</string>
    <string name="biometric_success">Login correcto</string>


<string-array name="standard">
    <item>Standard 1</item>
    <item>Standard 2</item>
    <item>Standard 3</item>
    <item>Standard 4</item>
</string-array>

    <string name="first_login_message_success"> Contraseña cargada correctamente </string>
    <string name="first_login_message_error"> Error al cambiar contraseña, intentélo de nuevo... </string>

    <string name="login_message_success"> Contraseña cargada correctamente </string>
    <string name="login_message_error"> Error al logear el usuario </string>
    <string name="login_message_error_user_not_Available"> El usuario está deshabilitado </string>

    <string name="dialog_logging_waiting"> Espere mientras logeamos al usuario </string>
    <string name="dialog_change_pass_waiting"> Espere mientras cambiamos su contraseña</string>
    <string name="dialog_auth_downloading"> Espere mientras cargarmos los parámetros </string>
    <string name="dialog_auth_saving"> Espere mientras guardamos los parámetros</string>

    <string name="auth_tittle_error"> Error al guardar los parámetros, por favor inténtelo más tarde</string>
    <string name="auth_tittle_ok"> Parámetros actualizados correctamente</string>

    <string name="param_tittle_one"> Número máximo de intentos </string>
    <string name="param_tittle_one_description"> Por favor escriba el número de intentos </string>

    <string name="param_tittle_two"> Tiempo de expiración de la contraseña </string>
    <string name="param_tittle_two_description"> Por favor escriba el tiempo de validez de su contraseña </string>

    <string name="param_tittle_three"> Tiempo de expiración de la sesión (Minutos) </string>
    <string name="param_tittle_three_description"> Por favor escriba el tiempo de duración de las sesiones </string>

    <string name="param_tittle_four"> Nro. de sesiones simultáneas </string>


    <string name="param_tittle_five"> Mínimo número de caracteres especiales</string>
    <string name="param_tittle_five_description"> Por favor escriba el número mínimo de caracteres especiales para la contraseña</string>


    <string name="param_tittle_six"> Mínimo número de  letras mayúsculas</string>
    <string name="param_tittle_six_description"> Por favor escriba el número mínimo de letras mayúsculas para la contraseña</string>


    <string name="param_tittle_seven"> Longitud para la contraseña </string>
    <string name="param_tittle_seven_description"> Por favor escriba la máxima longitud de la contraseña</string>


</resources>
