<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/default_items_margin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/style_textview_tittle"
        android:text="@string/textview_tittle_first_login"
        android:layout_above="@+id/llLogin"/>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_first_login_square_heigth"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_items_margin_mini"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiOldPassword"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_edittext_heigth"
                android:hint="@string/textview_tittle_old_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_items_margin_mini"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiCurrentPassword"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_edittext_heigth"
                android:hint="@string/textview_tittle_new_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/default_items_margin_mini">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiConfirmPassword"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_edittext_heigth"
                android:hint="@string/textview_tittle_confirmpassword"
                android:layout_marginTop="@dimen/default_items_margin"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rlButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_login_button_heigth"
        style="@style/style_button_login"
        android:layout_below="@+id/llLogin">

        <Button
            android:id="@+id/btnLoginWithCredentials"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_login_button_heigth"
            android:textColor="@android:color/white"
            android:onClick="onClickChangeCurrentPassword"
            android:background="@android:color/transparent"
            android:text="@string/button_tittle"/>

        <ImageView
            android:id="@+id/ivKeyLogin"
            android:layout_width="@dimen/activity_login_icon_width"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_items_margin_small"
            android:src="@drawable/ic_refresh_white"/>

    </RelativeLayout>

</RelativeLayout>